--- a/Product_Services/templates/login.html
+++ b/Product_Services/templates/login.html
@@ -11,20 +11,20 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="login-form">
-  <form>
+  <form action="validate/">
     <h1>Login</h1>
     <div class="content">
       <div class="input-field">
-        <input type="email" placeholder="Email" autocomplete="nope">
+        <input type="text" placeholder="User-Name" autocomplete="nope" name="uname" required>
       </div>
       <div class="input-field">
-        <input type="password" placeholder="Password" autocomplete="new-password">
+        <input type="password" placeholder="Password" autocomplete="new-password" name="psw" required>
       </div>
       <a href="#" class="link">Forgot Your Password?</a>
     </div>
     <div class="action">
-      <button>Register</button>
-      <button>Sign in</button>
+      <button></button>
+      <button>Log-in</button>
     </div>
   </form>
 </div>
