--- a/Product_Services/templates/login.html
+++ b/Product_Services/templates/login.html
@@ -11,7 +11,8 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="login-form">
-  <form action="validate/">
+  <form action="validate/" method="post">
+    {% csrf_token %}
     <h1>Login</h1>
     <div class="content">
       <div class="input-field">
