--- a/Product_Services/templates/register.html
+++ b/Product_Services/templates/register.html
@@ -11,26 +11,31 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="login-form">
-  <form>
+  <form action="register" method="post">
+    {% csrf_token %}
     <h1>Register</h1>
     <div class="content">
       <div class="input-field">
-        <input type="text" placeholder="First name" autocomplete="nope">
+        <input type="text" placeholder="First name" autocomplete="nope" name="fname">
       </div>
       <div class="input-field">
-        <input type="text" placeholder="Last name" autocomplete="nope">
+        <input type="text" placeholder="Last name" autocomplete="nope" name="lname">
       </div>
       <div class="input-field">
-        <input type="text" placeholder="User-name" autocomplete="nope" required>
+        <input type="text" placeholder="User-name" autocomplete="nope" name="uname" required >
+        <font color='red' >{{umsg}}</font>
+      </div>
+
+      <div class="input-field">
+        <input type="email" placeholder="Email" autocomplete="nope" name="email">
+        <font color='red' >{{emsg}}</font>
       </div>
       <div class="input-field">
-        <input type="email" placeholder="Email" autocomplete="nope">
+        <input type="password" placeholder="Password" autocomplete="new-password" name="npsw" required>
+        <font color='red' >{{pmsg}}</font>
       </div>
       <div class="input-field">
-        <input type="password" placeholder="Password" autocomplete="new-password" required>
-      </div>
-      <div class="input-field">
-        <input type="password" placeholder="Re-Password" autocomplete="new-password" required>
+        <input type="password" placeholder="Re-Password" autocomplete="new-password" name="rpsw" required>
       </div>
       <a href="#" class="link">Forgot Your Password?</a>
     </div>
