--- a/Product_Services/templates/index.html
+++ b/Product_Services/templates/index.html
@@ -28,11 +28,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="customer/login/">Login</a></li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="#services">{{user.first_name}}</a></li>
+                        <li class="nav-item"><a class="nav-link" href="customer/logout/">Logout</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link" href="customer/login1">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="customer/register">Register</a></li>
+                        {% endif %}
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+
+                        
                     </ul>
                 </div>
             </div>
