--- a/Product_Services/templates/index.html
+++ b/Product_Services/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% static "assets/img/portfolio/" as imgurl %}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -21,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="{% static 'assets/img/navbar-logo.svg' %}" alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="{% static 'assets/img/webicon.png' %}" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -89,11 +90,13 @@
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
+                
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
+                    {% if user.is_authenticated %}
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
@@ -106,6 +109,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Threads</div>
                                 <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <a href="details/">Product Details</a>
                             </div>
                         </div>
                     </div>
@@ -131,10 +135,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="{% static 'assets/img/portfolio/3.jpg' %}" alt="..." />
+                                <img class="img-fluid" src="{{imgurl}}{{Pro.image}}" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
+                                <div class="portfolio-caption-heading">{{Pro.name}}</div>
                                 <div class="portfolio-caption-subheading text-muted">Identity</div>
                             </div>
                         </div>
@@ -184,7 +188,16 @@
                             </div>
                         </div>
                     </div>
+
+                    {% else %}
+                    <font>Please Login or Register to view Portfolio </font>
+                    
+                    {% endif %}
                 </div>
+                    
+
+                   
+
             </div>
         </section>
         <!-- About-->
