--- a/Product_Services/templates/index.html
+++ b/Product_Services/templates/index.html
@@ -106,7 +106,8 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="{{imgurl}}{{data.image}}" alt="..." />
+                                <!-- <img class="img-fluid" src="{{imgurl}}{{data.image}}" alt="..." /> -->
+                                <img class="img-fluid" src="{{data.image.url}}" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">{{data.name}}</div>
