--- a/Product_Services/templates/product.html
+++ b/Product_Services/templates/product.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shop Item - Start Bootstrap Template</title>
+        <title>View Product </title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'pro/assets/favicon.ico' %}" />
         <!-- Bootstrap icons-->
@@ -19,12 +19,13 @@
                 height: 100px;
                 padding: 10px 17px;
                 box-sizing: border-box;
-                border: 2px solid gray;
+                border: 2px solid #ffc800;
                 border-radius: 5px;
                 font-size: 13px;
             }
             .sub{
-                background-color: #4CAF50;
+                
+                background-color: #ffc800;
                 border: none;
                 color: white;
                 margin: 5px 5px;
@@ -35,19 +36,22 @@
             }
             .commentarea{
                 height: 150px;
-                border: 3px solid gray;
-                overflow: auto;
+                border: 2px solid #ffc800;
+                overflow: auto;                
                 background-color: #fcfafa;
-                border-radius: 5px;
+                border-radius: 10px;
                 margin: 5px 5px;
                 width: 50%;
                 padding: 10px 17px;                
             }
         .text{
-            background-color: #f0eeed ;
+            background-color: #faf2b779 ;
             padding: 7px 7px;
             margin: 3px 3px;
             border-radius: 6px;
+        }
+        .session{
+            position: absolute;
         }
         </style>
        
@@ -56,7 +60,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">Start Your Service</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -81,6 +85,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center">
                     <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{objid.image.url}}" alt="..." /></div>
+                    
                     <div class="col-md-6">
                         <div class="small mb-1">SKU: BST-498</div>
                         <h1 class="display-5 fw-bolder">{{objid.name}}</h1>
@@ -89,7 +94,14 @@
                             <span> ₹{{objid.charge}}</span>
                         </div>
                         <p class="lead">{{objid.description}}</p>
+                        <div class="session"> 
+                            <!-- For loop for loading previous viewed image from the list -->
+                            {% for prev_img in prev %}
+                            <img src="{{prev_img.image.url}}" alt="" style="width: 100px; height: 100px">
+
+                            {% endfor %}                            
                         
+                        </div>                        
                       
                     </div>
 
@@ -110,7 +122,7 @@
                     {% for com in objid.comments.all %}
             
                         <div class="text">
-                            <h5> {{com.name}} </h5>
+                            <h6> {{com.name}} </h6>
                             <small>{{com.time}}</small>
                             <strong>{{com.body}}</strong>
 
@@ -133,8 +145,7 @@
                 </div>
                     
                 </div>
-            </div>
-        
+            </div>      
 
        
         <!-- Footer-->
