--- a/Product_Services/templates/index.html
+++ b/Product_Services/templates/index.html
@@ -56,7 +56,7 @@
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse" id="navbarResponsive" style="color: black;">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="#services">{{user.first_name}}</a></li>
@@ -89,7 +89,7 @@
                 </form>
             </div>
             <br>
-            <div class="container">
+            <div class="container" style="color: darkorange;">
                 <div class="masthead-subheading">Good to have you here!</div>
                 <div class="masthead-heading" style="font-size: 1.75rem;">Your Problem! Our Solution!</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
@@ -318,30 +318,32 @@
                 <!-- To make this form functional, sign up at-->
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                <form id="contactForm" action="email" method="post" >
+                    {% csrf_token %}
+                    
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <!-- Name input-->
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
+                                <input name="name" class="form-control" id="name" type="text" placeholder="Your Name *" required/>
                                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                             </div>
                             <div class="form-group">
                                 <!-- Email address input-->
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
+                                <input name="email" class="form-control" id="email" type="email" placeholder="Your Email *" required />
                                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                             </div>
                             <div class="form-group mb-md-0">
                                 <!-- Phone number input-->
-                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
+                                <input name="phone" class="form-control" id="phone" type="tel" placeholder="Your Phone *" required/>
                                 <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group form-group-textarea mb-md-0">
                                 <!-- Message input-->
-                                <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
+                                <textarea name="message" class="form-control" id="message" placeholder="Your Message *" required></textarea>
                                 <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
                             </div>
                         </div>
@@ -364,7 +366,7 @@
                     <!-- an error submitting the form-->
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                     <!-- Submit Button-->
-                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
+                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase"  type="submit">Send Message</button></div>
                 </form>
             </div>
         </section>
